--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Stay open minded. Things aren't always what they seem to be."
+description: "Just do it."
 ---
 
 {% for post in paginator.posts %}
