--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Just do it."
+description: "WELCOME TO A UNSWEETENED BUT TRUE WORLD!"
 ---
 
 {% for post in paginator.posts %}
