--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "WELCOME TO A UNSWEETENED BUT TRUE WORLD!"
+description: "UNSWEETENED PYTHON CHIPS"
 ---
 
 {% for post in paginator.posts %}
