--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "UNSWEETENED PYTHON CHIPS"
+description: "INGREDIENTS: PYTHON, ALGORITHMS. CONTAINS OOP. MAY CONTAIN PYGAME APPLICATIONS."
 ---
 
 {% for post in paginator.posts %}
