--- a/tags.html
+++ b/tags.html
@@ -6,7 +6,7 @@ header-img: "img/tag-bg.jpeg"
 ---
 
 <!-- Page Header -->
-<header class="intro-header" style="color: #fff;text-align: center;background-color: #159957;background-image: linear-gradient(180deg, #FF8C00, #4169E1);">
+<header class="intro-header" style="color: #fff;text-align: center;background-color: #159957;background-image: linear-gradient(180deg, #FF6347, #4169E1);">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
