--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-description: "你来到了没有知识的荒原 :("
-header-img: "img/404-bg.jpg"
+description: "OOPS-- seems like you got lost.. Try to click the HOME button on the top right corner??"
+header-img: "img/404.jpeg"
 permalink: /404.html
 ---
 
